add: documentation item plantilla
