# backend/storage/api-docs/api-docs.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API Docente",
+        "title": "API proyecto EVA",
         "version": "1.0"
     },
     "servers": [
@@ -88,7 +88,7 @@
                 "tags": [
                     "Docentes"
                 ],
-                "summary": "Mostar un nuevo docente",
+                "summary": "Mostar un docente",
                 "operationId": "37831e907cc4854634b06b90428f97bd",
                 "parameters": [
                     {
@@ -114,7 +114,7 @@
                 "tags": [
                     "Docentes"
                 ],
-                "summary": "Actualizar un nuevo docente",
+                "summary": "Actualizar un docente",
                 "operationId": "8f46da718f5a5078ca5d754deade6559",
                 "parameters": [
                     {
@@ -274,6 +274,281 @@
                     }
                 }
             }
+        },
+        "/api/empresa/{id}": {
+            "get": {
+                "tags": [
+                    "Empresas"
+                ],
+                "summary": "Mostar una empresa",
+                "operationId": "ee65f25e5fe4a898ac866a4e3d5e1cb6",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del empresa",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Datos de una empresa"
+                    },
+                    "404": {
+                        "description": "Empresa no encontrada"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Empresas"
+                ],
+                "summary": "Actualizar una empresa",
+                "operationId": "69e2a499316b74cd18d3577f00ceec70",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del empresa",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "nombre_corto": {
+                                        "type": "string",
+                                        "example": "ISSA"
+                                    },
+                                    "nombre_largo": {
+                                        "type": "string",
+                                        "example": "Inovasion de solucion software amigable"
+                                    },
+                                    "id_usuario": {
+                                        "type": "string",
+                                        "example": "8"
+                                    },
+                                    "correo": {
+                                        "type": "string",
+                                        "example": "ISSA@correo.com"
+                                    },
+                                    "telefono": {
+                                        "type": "string",
+                                        "example": "4305445"
+                                    },
+                                    "imagen": {
+                                        "type": "string",
+                                        "example": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABmJLR0QABwAGAAamjb7oAAAACXBIWXMAAC4jAAAuIwF4pT92AAAAB3RJTUUH6AoICzEL5B0y2gAAABl0RVh0Q29tbWVudABDcmVhdGVkIHdpdGggR0lNUFeBDhcAAAOBSURBVHja7dxPSJt3HMfxd6PEhAiB9bIeViQXD9qDEEVQFi8KIsIiJiz4pxnr2VNHoqzYdEhguoIddhayCutJc1qX4Hr2tECzxGMEc1hYWTFbwWASY/LsMJSu2o5ko7rt84bf5eFLHp7fK+R5kkMutZjNBurCZNIWCEQJRCBKIAJRAhGIEohAlECUQASiBCIQJRCBKIEIRAlECUQgSiACUQIRiBKIQJRAlEAEogQiECUQgSiBCEQJRAlEIEogAlH/RZCV+/cplkqsPnjwp+OBYJAfUyl+ef6c/UKBn58944dEgtuh0KnXqGf2uK9WVymWSvz24gWd164J5E19cfcu8/PzmEwmFhYW6O/vJxwOYzKZCAQCfOB2NzT7cgMDAxQKBSwWCzMzM+d6vc0XHWR0dJRKpcL4+Dg7mQwA6VSKL+/dYyMapVqtNjR73PT167S1tbGxsUFfXx8ul0sgb8pqtVIsFk82+OW8Hk/Ds8f5fD7K5TLLy8uUy2Wmpqb4+MYNvo5E9JF1VtlsFrvdzjePHmGz2f6xWYB3r1zB6XSSTCZJPn3K4uIixWIRr9ere8jrCoVCZLNZPB4PP+VypNJpvovFCASDf2sWIBgI0Nrayvr6OgA7mQyJRAKn08l7V6+ey/U2NTc13b4omz8yMkJXVxfpdJpYLPbHu353l5WVFfL5PIeHh7S0tNDZ2cnw8DA+n49kMkkul6t7FuDzxUX29/f5yO8/OWYAY2NjWK1WNjc33/4mtJjNxkVZkUjEqNVqxtra2l/OxuNxo1arGVtbWw3NTkxMGNVq1ajVameunZ2dc9mDf+0Xw6nJSY6OjnA4HA3NTk9PUygUsFosp9bS0hIOh4MPfT7dQ17t+ydP6O3tPXX8fZeL5uZmSqVS3bM2m42enh4yZzyNAaw9fEilUmFyclKPva/W0dHBt48fE4/HiUaj7O3tMTg4iN/vxzCMk3tNPbOf3rqF3W4nlUqdec7d3V2y2Szd3d28c/kyv+bzAjlubm4Or9eLy+XC7XZjNps5ODggl8sRDof57M6dumeHhoYwDINoNPra825vb9Pe3s7s7Cyf3Lz51q73kv4mVj8uKoEIRAlEIEogAlECEYgSiBKIQJRABKIEIhAlEIEogSiBCEQJRCBKIAJRAhGIEogSiECUQASiBCIQJRCBKIEogQhECUQgSiACUQL5//U7xBcHwU6U9OAAAAAASUVORK5CYII="
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Empresa creada con éxito"
+                    },
+                    "422": {
+                        "description": "Problemas con los datos ingresados"
+                    },
+                    "404": {
+                        "description": "Empresa no encontrada"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Empresas"
+                ],
+                "summary": "Eliminar un empresa",
+                "operationId": "be769ab5b92b9a5e1172124472930eda",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la empresa",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Docente eliminado"
+                    },
+                    "404": {
+                        "description": "Docente no encontrado"
+                    }
+                }
+            }
+        },
+        "/api/item_plantilla": {
+            "get": {
+                "tags": [
+                    "Item Plantillas"
+                ],
+                "summary": "Obtiene una lista de items planilla",
+                "operationId": "afc281315e967dadc1191cf0f522633b",
+                "responses": {
+                    "200": {
+                        "description": "Lista de de items planilla"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Item Plantillas"
+                ],
+                "summary": "Crear un nuevo Item Plantilla",
+                "operationId": "0e53fc29961ce75a19a07665788898b1",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "titulo",
+                                    "id_plantilla"
+                                ],
+                                "properties": {
+                                    "titulo": {
+                                        "type": "string",
+                                        "example": "Diseño de base de datos"
+                                    },
+                                    "id_plantilla": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Item Plantilla creado con éxito"
+                    },
+                    "422": {
+                        "description": "Problemas con los datos ingresados"
+                    }
+                }
+            }
+        },
+        "/api/item_plantilla/{id}": {
+            "get": {
+                "tags": [
+                    "Item Plantillas"
+                ],
+                "summary": "Mostar un item plantilla",
+                "operationId": "4508e38400dd5826b93ba780afc3a56d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del item plantilla",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Datos del item plantilla"
+                    },
+                    "404": {
+                        "description": "item plantilla no encontrado"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Item Plantillas"
+                ],
+                "summary": "Actualizar un item planilla",
+                "operationId": "d1d5ede5b6049a6d2206cbb86c613944",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del item plantilla",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "titulo": {
+                                        "type": "string",
+                                        "example": "Diseño de base de datos"
+                                    },
+                                    "id_plantilla": {
+                                        "type": "integer",
+                                        "example": "1"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "item plantilla actualizado con éxito"
+                    },
+                    "404": {
+                        "description": "item plantilla no encontrado"
+                    },
+                    "422": {
+                        "description": "Problemas con los datos ingresados"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Item Plantillas"
+                ],
+                "summary": "Eliminar un item plantilla",
+                "operationId": "34c947e3ec92a4172cfdfb83356c4e46",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del item plantilla",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "item plantilla eliminado"
+                    },
+                    "404": {
+                        "description": "item plantilla no encontrado"
+                    }
+                }
+            }
         }
     },
     "tags": [
@@ -284,6 +559,10 @@
         {
             "name": "Empresas",
             "description": "Empresas"
+        },
+        {
+            "name": "Item Plantillas",
+            "description": "Item Plantillas"
         }
     ]
 }
